# Self-gravitation_FEM

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  common.hpp  ex1.cpp  ex2.cpp  ex3.cpp
meshing/: CMakeLists.txt  Phobos.cpp  benchmark.cpp  common.cpp  common.hpp  prem.cpp
